1.5.6:
 * Added permalinks to blog and discussion forum posts.
 * Fixed a bug in Internet Explorer in which clicking a link sometimes caused
   the browser window to scroll to the destination note, only to immediately
   scroll back to the clicked link.

1.5.5: November 6, 2008
 * Improved speed of Luminotes Desktop by adding some database indices. This
   will help in particular for larger notebooks with many notes.
 * Added some code to automatically upgrade your database when upgrading to a
   new Luminotes release. This applies to all Luminotes products.
 * Added code to support Luminotes discussion forums.
 * Laid some of the foundational groundwork for future tags support.
 * Made the subscription pricing page a little less confusing by hiding some
   of the bigger plans by default.
 * Increased the limit on characters per note from 25,000 to 50,000.
 * Fixed a visual conflict between your web browser's search field
   autocomplete and Luminotes built-in suggest-as-you-type feature.
 * Fixed an occasional bug that caused unexpected logouts. The solution was
   to move the session information into the database where it could be
   properly locked.
 * NOTE: After upgrading to this release, you must restart memcached to clear
   the cache. Failing to do so will cause errors with the Note object. This
   does not apply to Luminotes Desktop.
 * NOTE: After upgrading to this release and starting Luminotes, you can
   optionally convert all existing user sessions with the script
   tools/convert_sessions.py. This is not necessary for Luminotes Desktop.

1.5.4: October 9, 2008
 * Fixed a visual bug in which clicking up or down to reorder your notebooks
   didn't display correctly.

1.5.3: October 9, 2008
 * Safari and Chrome web browsers are now supported (beta):
   * You can now create and end links.
   * Underline and strikethrough now work.
   * Pulldowns for search suggestions, importing, and exporting show up.