@@ -2,7 +2,7 @@ DROP VIEW luminotes_user_current;
 DROP TABLE luminotes_user;
 DROP VIEW luminotes_group_current;
 DROP TABLE luminotes_group;
-DROP VIEW note_current;
+DROP TABLE note_current;
 DROP TABLE note;
 DROP VIEW notebook_current;
 DROP TABLE notebook;
@@ -18,3 +18,4 @@ DROP TABLE tag_note;
 DROP TABLE schema_version;
 DROP TABLE session;
 DROP FUNCTION drop_html_tags( text ); 
+DROP FUNCTION log_note_revision();
